--- a/assignmentsem6.html
+++ b/assignmentsem6.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet"  type="text/css" href="css/style.css" >
     <title>Assignment Sem6</title>
 </head>
 
