book section added

--- a/booksem7.html
+++ b/booksem7.html
@@ -11,8 +11,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Teko:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
-    <link rel="stylesheet"  type="text/css" href="css/style.css" >
-    <title>Contact us</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <title>Website for Learners</title>
 </head>
 
 <body>
@@ -86,41 +86,120 @@
             </div>
         </div>
     </nav>
-    <div class="contact-wrapper">
-        <div class="contact-header">
-            <h1>Get in touch</h1>
-            <p>If you want to contribute in material or to give any suggestion mail me at
-                <a href="mailto:faviasuainok@gmail.com" class="contact-mail">yaminshaikh.ys47@gmail.com</a> and ~let's
-                talk.
-            </p>
-
-
-        </div>
-
-        <div class="follow-links">
-            <h3>Mobile <i class="fa fa-mobile-phone"></i></h3>
-            <h2><a href="tel:+918866709037" class="contact-mail">+918866709037</a></h2>
-
-            <h2>My Social</h2>
-            <p>Follow me online on Facebook and my Profile on Twitter, Github and Whatsapp</p>
-
-            <div class="follow-links-btns">
-                <a class="facebook-btn btn" target="_blank" href="https://www.instagram.com/yaminshaikh_217/"
-                    title="Follow on instagram">INSTAGRAM</a>
-                <a class="github-btn btn" target="_blank" href="https://github.com/yaminshaikh217/yamin217"
-                    title="Follow on GitHub">GITHUB</a>
-                <a class="linkedin-btn btn" target="_blank" href="https://www.linkedin.com/in/shaikh-yamin-60808120a"
-                    title="Connect on Linkedin">LINKEDIN</a>
-                <a class="twitter-btn btn" target="_blank" href="https://twitter.com/ShaikhYamin217?s=08"
-                    title="Follow on Twitter">TWITTER</a>
-
-
+    <div class="container">
+        <div class="container-fluid contact-wrapper">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">Analog & Digital Communication</h3> -->
+                            <p class="card-text">Book of Machine Learning </p>
+                            <a href="https://drive.google.com/file/d/1OHoWYm3zBPhd-0FkZvtBcTxJ2OeI33Ic/view?usp=drivesdk"
+                                class="btn  btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">VLSI Design</h3> -->
+                            <p class="card-text">Book of Wireless Communication</p>
+                            <a href="https://drive.google.com/file/d/1OKuCEzoCX3bSYsnzG3yg-GD_aQ-V05fa/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">Analog & Digital Communication</h3> -->
+                            <p class="card-text">Book of Automotive Electronics </p>
+                            <a href="https://drive.google.com/file/d/1OHoWYm3zBPhd-0FkZvtBcTxJ2OeI33Ic/view?usp=drivesdk"
+                                class="btn  btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">VLSI Design</h3> -->
+                            <p class="card-text">Book of Practical Ascepts Computer Vision</p>
+                            <a href="https://drive.google.com/file/d/1OKuCEzoCX3bSYsnzG3yg-GD_aQ-V05fa/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">Python Programming</h3> -->
+                            <p class="card-text">Book of Microwave Theory & Techniques</p>
+                            <a href="https://drive.google.com/file/d/1OSjQeRGThtw5Wf9UmPMN3w6E2d5MeqPH/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">Power Electronics</h3> -->
+                            <p class="card-text">Book of Internet of Things</p>
+                            <a href="https://drive.google.com/file/d/1OgeeB5un47igC_moAYnLOE8AQOgURo1O/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">Principles of Management</h3> -->
+                            <p class="card-text">Book of Radar & Navigational Aids</p>
+                            <a href="https://drive.google.com/file/d/1OAjBYlZ_NCyOcc9_1Vq4XaLRbAMzXvSI/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6  ">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">IPDC</h3> -->
+                            <p class="card-text">Book of Testin & Verification</p>
+                            <a href="https://drive.google.com/file/d/1P74VObMabfY0MGzWFEWnxDAO3OOpGM8S/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="card">
+                        <div class="card-body">
+                            <!-- <h3 class="card-title">Principles of Management</h3> -->
+                            <p class="card-text">Book of Digital Signal Processing</p>
+                            <a href="https://drive.google.com/file/d/1OAjBYlZ_NCyOcc9_1Vq4XaLRbAMzXvSI/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div class="col-sm-6  ">
+                    <div class="card">
+                        <div class="card-body">
+                            <h3 class="card-title">IPDC</h3>
+                            <p class="card-text">Book of Testin & Verification</p>
+                            <a href="https://drive.google.com/file/d/1P74VObMabfY0MGzWFEWnxDAO3OOpGM8S/view?usp=drivesdk"
+                                class="btn btn-primary" target="_blank">Download</a>
+                        </div>
+                    </div>
+                </div> -->
             </div>
         </div>
     </div>
-    </div>
-
-
     <footer class="footer">
         <div class="containers text-center">
             <a href="https://github.com/yaminshaikh217/yamin217" target="_blank"><i class="fa fa-github"></i></a>
@@ -128,7 +207,7 @@
             <a href="https://www.linkedin.com/in/shaikh-yamin-60808120a" target="_blank"><i
                     class="fa fa-linkedin"></i></a>
             <a href="https://www.instagram.com/yaminshaikh_217/" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="+918866709037" target="_blank"><i class="fa fa-whatsapp"></i></a>
+            <a href="https://wa.me/918866709037" target="_blank"><i class="fa fa-whatsapp"></i></a>
             <a href="https://stackoverflow.com/users/story/15289658" target="_blank"><i
                     class="fa fa-stack-overflow"></i></a>
         </div>
