--- a/home.html
+++ b/home.html
@@ -66,6 +66,22 @@
                             <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 8 </a></li> -->
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle  hover active" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Books
+                        </a>
+                        <ul class="dropdown-menu  secondary-color" aria-labelledby="navbarDropdownMenuLink">
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 1</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 2</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 3 </a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 4</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="labsem5.html">Sem 5</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="labsem6.html">Sem 6</a></li> -->
+                            <li><a class="dropdown-item fw-bold color2" href="booksem7.html">Sem 7</a></li>
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 8 </a></li> -->
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -76,7 +92,8 @@
             <p class="lead">Hello,This Website is for education purpose. Students studying under GTU can download
                 Assignments , lab Manuals and many more stuff in Future. At present moment material is available for Sem
                 5 & 6 only. In future i will add all the semester. And please share with your buddies also, so that they
-                can also get free study material.I will also add pdf of books according to subject.</p>
+                can also get free study material.I will also add pdf of books according to subject.  For GTU Syllabus <a
+                href="https://gtu-info.com/branch/EC-Engineering/Syllabus-New" target="_blank">click here</a></p>
         </div>
     </div>
     <footer class="footer">
