--- a/assignmentsem6.html
+++ b/assignmentsem6.html
@@ -66,6 +66,22 @@
                             <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 8 </a></li> -->
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle  hover active" href="#" id="navbarDropdownMenuLink"
+                            role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Books
+                        </a>
+                        <ul class="dropdown-menu  secondary-color" aria-labelledby="navbarDropdownMenuLink">
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 1</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 2</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 3 </a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 4</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="labsem5.html">Sem 5</a></li> -->
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="labsem6.html">Sem 6</a></li> -->
+                            <li><a class="dropdown-item fw-bold color2" href="booksem7.html">Sem 7</a></li>
+                            <!-- <li><a class="dropdown-item fw-bold color2" href="#">Sem 8 </a></li> -->
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
