changed the UI and added book section

--- a/booksem7.html
+++ b/booksem7.html
@@ -94,7 +94,7 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">Analog & Digital Communication</h3> -->
                             <p class="card-text">Book of Machine Learning </p>
-                            <a href="https://drive.google.com/file/d/1OHoWYm3zBPhd-0FkZvtBcTxJ2OeI33Ic/view?usp=drivesdk"
+                            <a href="https://drive.google.com/file/d/1TyFKxQS2PNZHXUQu6lqMr5JntZTfmBDs/view?usp=drivesdk"
                                 class="btn  btn-primary" target="_blank">Download</a>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">VLSI Design</h3> -->
                             <p class="card-text">Book of Wireless Communication</p>
-                            <a href="https://drive.google.com/file/d/1OKuCEzoCX3bSYsnzG3yg-GD_aQ-V05fa/view?usp=drivesdk"
+                            <a href="https://drive.google.com/file/d/1TPhTHn99glxlXPR2WThPALto7DUTbEFW/view?usp=drivesdk"
                                 class="btn btn-primary" target="_blank">Download</a>
                         </div>
                     </div>
@@ -116,8 +116,8 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">Analog & Digital Communication</h3> -->
                             <p class="card-text">Book of Automotive Electronics </p>
-                            <a href="https://drive.google.com/file/d/1OHoWYm3zBPhd-0FkZvtBcTxJ2OeI33Ic/view?usp=drivesdk"
-                                class="btn  btn-primary" target="_blank">Download</a>
+                            <a href="https://1lib.in/book/3419544/1ebd1e" class="btn  btn-primary"
+                                target="_blank">Download</a>
                         </div>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">VLSI Design</h3> -->
                             <p class="card-text">Book of Practical Ascepts Computer Vision</p>
-                            <a href="https://drive.google.com/file/d/1OKuCEzoCX3bSYsnzG3yg-GD_aQ-V05fa/view?usp=drivesdk"
-                                class="btn btn-primary" target="_blank">Download</a>
+                            <a href="https://1lib.in/s/Practical%20Aspects%20Computer%20Vision" class="btn btn-primary"
+                                target="_blank">Download</a>
                         </div>
                     </div>
                 </div>
@@ -138,8 +138,8 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">Python Programming</h3> -->
                             <p class="card-text">Book of Microwave Theory & Techniques</p>
-                            <a href="https://drive.google.com/file/d/1OSjQeRGThtw5Wf9UmPMN3w6E2d5MeqPH/view?usp=drivesdk"
-                                class="btn btn-primary" target="_blank">Download</a>
+                            <a href="https://1lib.in/book/5191557/d6b4e9" class="btn btn-primary"
+                                target="_blank">Download</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">Power Electronics</h3> -->
                             <p class="card-text">Book of Internet of Things</p>
-                            <a href="https://drive.google.com/file/d/1OgeeB5un47igC_moAYnLOE8AQOgURo1O/view?usp=drivesdk"
+                            <a href="https://drive.google.com/file/d/1T7qKY9i0S-DMxrXaAMaV0M6OCVJkt363/view?usp=drivesdk"
                                 class="btn btn-primary" target="_blank">Download</a>
                         </div>
                     </div>
@@ -160,8 +160,8 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">Principles of Management</h3> -->
                             <p class="card-text">Book of Radar & Navigational Aids</p>
-                            <a href="https://drive.google.com/file/d/1OAjBYlZ_NCyOcc9_1Vq4XaLRbAMzXvSI/view?usp=drivesdk"
-                                class="btn btn-primary" target="_blank">Download</a>
+                            <a href="https://1lib.in/book/11638402/f080c0" class="btn btn-primary"
+                                target="_blank">Download</a>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">IPDC</h3> -->
                             <p class="card-text">Book of Testin & Verification</p>
-                            <a href="https://drive.google.com/file/d/1P74VObMabfY0MGzWFEWnxDAO3OOpGM8S/view?usp=drivesdk"
+                            <a href="https://drive.google.com/file/d/1U3hyM6joDhYFqJWoG45kjNg5G1i8JKgS/view?usp=drivesdk"
                                 class="btn btn-primary" target="_blank">Download</a>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                         <div class="card-body">
                             <!-- <h3 class="card-title">Principles of Management</h3> -->
                             <p class="card-text">Book of Digital Signal Processing</p>
-                            <a href="https://drive.google.com/file/d/1OAjBYlZ_NCyOcc9_1Vq4XaLRbAMzXvSI/view?usp=drivesdk"
+                            <a href="https://drive.google.com/file/d/1TiQasM0A2jYSSLrwmyC1vRQvEiX_NY1g/view?usp=drivesdk"
                                 class="btn btn-primary" target="_blank">Download</a>
                         </div>
                     </div>
