changed the nav color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid" style="background: #69a297;">
+        <div class="container-fluid" style="background: #ef9273;">
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,7 +94,7 @@
                 5 & 6 only. In future i will add all the semester. And please share with your buddies also, so that they
                 can also get free study material. For GTU Syllabus <a
                     href="https://gtu-info.com/branch/EC-Engineering/Syllabus-New" target="_blank">click here</a></p>
-            
+
         </div>
     </div>
     <footer class="footer">
